[MNG-8123] Fix Lifecycle in v3 (#1524)